--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   # Serviço que irá rodar o node
@@ -22,7 +22,7 @@ services:
     working_dir: /app
     # Lista de volumes (diretórios) mapeados de fora para dentro do container
     volumes:
-      # Monta o diretório atual, com todos os dados do projeto, 
+      # Monta o diretório atual, com todos os dados do projeto,
       # dentro do diretório /app
       - ./:/app
     # Lista de serviços do qual este serviço depende
@@ -56,8 +56,8 @@ services:
     ports:
       # Garanta que não haverá conflitos de porta com um banco que esteja
       # rodando localmente
-      - 3306:3306
-      - 33060:33060
+      - 33061:3306
+      - 33062:33062
     environment:
       MYSQL_ROOT_PASSWORD: password
     networks:
@@ -69,7 +69,6 @@ networks:
   blogs_api_net:
     # Define o `driver` como `bridge`, que é o driver padrão do docker
     driver: bridge
-
 # As chaves `tty`, `stdin_open` e `command` fazem com que o container fique
 # rodando em segundo plano, bem como tornam possível o uso do comando
 # `docker attach`, já deixando o terminal atual acoplado ao container, direto
