--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "main": "src/server.js",
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "reset": "npm run drop && npm run prestart && npm run seed",
     "start": "node .",
     "start:test": "API_PORT=3030 NODE_ENV=test npm start",
     "kill:test": "if lsof -t -i:3030; then kill -9 $(lsof -t -i:3030); fi",
